# psychology

./: .gitignore  README.md  SentimentModel.py  StressModel.py  main.py  model.txt  pyproject.toml  requirements.txt  runmodel.py
app/: config.py  main.py
app/models/: SentimentModel.py  StressModel.py  __init__.py
app/routers/: questionnaire.py
app/schemas/: questionnaire.py
app/services/: __init__.py  analysis_service.py  gemini_service.py  questionnaire_service.py
app/utils/: Translate.py
models/: SentimentModel.py  StressModel.py
test/: main.py.bak  runmodel.py
utils/: test.py
