[project]
name = "psychology"
version = "0.1.0"
description = "A FastAPI application for psychology-related tasks using generative AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "google-generativeai>=0.8.5",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
]
